using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.SceneManagement;

public class PlayerController : MonoBehaviour {

    public float moveSpeed;
    private Animator anim;
    private bool playerMoving;
    private Vector2 lastMove;

    private void Awake()
    {
        DontDestroyOnLoad(this);
    }
    // Use this for initialization
    void Start () {
        anim = GetComponent<Animator>();
    }
	
	// Update is called once per frame
	void Update () {
        if (SceneManager.GetActiveScene().name == "Transition")
        {
            transform.position = new Vector3(transform.position.x, 0f, transform.position.z);
        }
        playerMoving = false;
        if (Input.GetAxisRaw("Horizontal") > 0.5f || Input.GetAxisRaw("Horizontal") < -0.5f)
        {
            transform.Translate(new Vector3(Input.GetAxisRaw("Horizontal") * moveSpeed * Time.deltaTime, 0f, 0f));
            playerMoving = true;
            lastMove = new Vector2(Input.GetAxisRaw("Horizontal"),0f);
        }
        if(Input.GetAxisRaw("Vertical") > 0.5f || Input.GetAxisRaw("Vertical") < -0.5f)
        {
            transform.Translate(new Vector3(0f, Input.GetAxisRaw("Vertical") * moveSpeed * Time.deltaTime, 0f));
            playerMoving = true;
            lastMove = new Vector2(0f, Input.GetAxisRaw("Vertical"));
        }
        anim.SetFloat("MoveX", Input.GetAxisRaw("Horizontal"));
        anim.SetFloat("MoveY", Input.GetAxisRaw("Vertical"));
        anim.SetBool("PlayerMoving", playerMoving);
        anim.SetFloat("LastMoveX", lastMove.x);
        anim.SetFloat("LastMoveY", lastMove.y);
    }

    private void OnTriggerEnter2D(Collider2D other)
    {
        if (other.tag == "EndFirstLevel")
        {
            SceneManager.LoadScene("Transition");
            transform.position = new Vector2(0.0f, 0.0f);
        }
        if (other.tag == "EndTrans1")
        {
            SceneManager.LoadScene("Level_2");
            transform.position = new Vector2(0.0f, 0.0f);
        }
        if (other.tag == "EndSecondLevel")
        {
            SceneManager.LoadScene("Transition_2");
            transform.position = new Vector2(0.0f, 0.0f);
        }
        if (other.tag == "EndTrans2")
        {
            SceneManager.LoadScene("Level_3");
            transform.position = new Vector2(0.0f, 0.0f);
        }
    }
}

